[package]
name = "sapling-mpc"
version = "0.2.0"
authors = ["Sean Bowe <ewillbefull@gmail.com>"]

[[bin]]
name = "new"
required-features = ["verification"]

[[bin]]
name = "verify"
required-features = ["verification"]

[[bin]]
name = "compute"

[[bin]]
name = "verify_transform"

[[bin]]
name = "split_params"

[dependencies]
phase2 = "0.2.1"
pairing = "0.14"
rand = "0.4"
blake2-rfc = "0.2"

[dependencies.sapling-crypto]
git = "https://github.com/zcash-hackworks/sapling-crypto"
rev = "eb409fa3cf8df215ae8d35f5e385751a0c5ffb85"
optional = true

[features]
verification = ["sapling-crypto"]
u128-support = ["pairing/u128-support"]
